--- a/hello-world.html
+++ b/hello-world.html
@@ -1,9 +1,5 @@
 <HTML>
 <HEAD></HEAD>
-<<<<<<< HEAD
-<BODY>hi
-=======
-<BODY>Wds1
->>>>>>> 16db0332d64b7bc089d90f97f6782cf1b4df1437
+<BODY>his
 </BODY>
 </HTML>
