automationcommitvSline with Bitbucket

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>Head</HEAD>
 <BODY>
-6.2.22automation commitALmautomation commit2QBautomation commitLqaautomation commit8Utautomatioautomation commitxEGautomation commitH3Yautomation commitMEoautomation commitcg1automation commitq3dautomation commitjRUautomation commit1qJautomation commitWPuautomation commitMlDn commitufeautomautomation commitjXRautomation commitGJiautomation commitWM8automation commits3Gautomation commitGgUation commitoY1
+6.2.22automation commitALmautomation commit2QBautomation commitLqaautomation commit8Utautomatioautomation commitpmDautomation commitxEGautomation commitH3Yautomation commitMEoautomation commitcg1automation commitq3dautomation commitjRUautomation commit1qJautomation commitWPuautomation commitMlDn commitufeautomautomation commitjXRautomation commitGJiautomation commitWM8automation commits3Gautomation commitGgUation commitoY1
  webhook 7883
 </BODY>
 </HTML>
