hello-world.html edited online with Bitbucket

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,6 +1,5 @@
 <HTML>
-<HEAD>Head</HEAD>
-<BODY>
-6.2.22automation commitALmautomation commit2QBautomation commitLqaautomation commit8Utautomatioautomation commitpmDautomation commitxEGautomation commitH3Yautomation commitMEoautomation commitcg1automation commitq3dautomation commitjRUautomation commit1qJautomation commitWPuautomation commitMlDn commitufeautomautomation commitjXRautomation commitGJiautomation commitWM8automation commits3Gautomation commitGgUation commitoY1
+<HEAD></HEAD>
+<BODY>1.13.22 5.02PM ET
 </BODY>
 </HTML>
