hello-world.html edited online with Bitbucket

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD></HEAD>
-<BODY>automation commit 5/14 Test kubernates upgrade
+<BODY>automation commit 5/24 Test
   1
 </BODY>
 </HTML>
